# CSE-TRADE

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  run_app.py
src/cse_trade/: __init__.py  main.py
src/cse_trade/agents/: chatbot.py  providers.py
src/cse_trade/api/: client.py
src/cse_trade/core/: cache.py  models.py  portfolio.py  statistics.py
src/cse_trade/tests/: test_format_response.py
src/cse_trade/threads/: workers.py
src/cse_trade/ui/: analytics.py  charts.py  chat.py  dashboard.py  main_window.py  portfolio.py  screener.py  settings.py
