[project]
name = "cse-trade"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "charithmadhuranga", email = "nikhuge@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "pyqtgraph>=0.14.0",
    "pyside6>=6.10.2",
    "requests>=2.32.5",
]

[build-system]
requires = ["uv_build>=0.9.14,<0.10.0"]
build-backend = "uv_build"
