[project]
name = "cse-trade"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "charithmadhuranga", email = "nikhuge@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "pyqtgraph>=0.14.0",
    "pyside6>=6.10.2",
    "requests>=2.32.5",
    "scipy>=1.11.0",
    "scikit-learn>=1.3.0",
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-community>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-google-genai>=0.1.0",
    "langchain-ollama>=0.1.0",
]

[build-system]
requires = ["uv_build>=0.9.14,<0.10.0"]
build-backend = "uv_build"
